tests/invalid/generated_binop_add_bool_int/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bool = True
    y: int = 1
    z = x + y
